# voxmlx

./: .gitignore  ELIXIR_FEASIBILITY_REPORT.md  PORT_BASED_PYTHON_STT_PLAYGROUND.md  README.md  pyproject.toml  python_subprocess_playground_integration.d2  stt_port_worker.py  tts_port_worker.py
openspec/: config.yaml
openspec/changes/stt-playground-runtime-hardening/: design.md  proposal.md  tasks.md
openspec/specs/chat-conversation-ui/: spec.md
openspec/specs/on-air-indicator-ui/: spec.md
openspec/specs/speech-activity-state/: spec.md
openspec/specs/stt-audio-gating/: spec.md
openspec/specs/stt-session-continuity/: spec.md
openspec/specs/transcribing-indicator-ui/: spec.md
openspec/specs/transcription-processing-state/: spec.md
openspec/specs/tts-answer-resilience/: spec.md
openspec/specs/voice-conversation-history/: spec.md
openspec/specs/voice-turn-auto-submit/: spec.md
stt_playground/: .gitignore  README.md  mix.exs  precommit.sh  start_dev.sh
stt_playground/assets/css/: app.css
stt_playground/assets/js/: app.js
stt_playground/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
stt_playground/lib/: stt_playground.ex  stt_playground_web.ex
stt_playground/lib/stt_playground/: application.ex
stt_playground/lib/stt_playground_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
stt_playground/scripts/: dspy_ollama_playground.exs
stt_playground/test/support/: conn_case.ex  stt_fake_worker.py
voxmlx/: __init__.py  _version.py  audio.py  convert.py  encoder.py  generate.py  model.py  stream.py  weights.py
(+64 files in other folders)
