[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "voxmlx"
dynamic = ["version"]
description = "Voxtral Mini Realtime speech-to-text in MLX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
    "numpy",
    "soundfile",
    "sounddevice",
    "huggingface-hub",
    "mistral-common",
    "sentencepiece",
]

# This repo contains non-Python trees (Phoenix app + OpenSpec artifacts) at the
# top level. Explicitly package only the actual Python library.
[tool.setuptools.packages.find]
where = ["."]
include = ["voxmlx*"]
exclude = ["stt_playground*", "openspec*"]

[tool.setuptools.dynamic]
# Don't import voxmlx/__init__.py during build; it imports runtime deps.
version = {attr = "voxmlx._version.__version__"}

[project.scripts]
voxmlx = "voxmlx:main"
voxmlx-convert = "voxmlx.convert:main"
